# task_interview

./: .gitignore  pyproject.toml
task1/: solution.py  tests.py
task2/: beasts.csv  names.json  solution.py  tests.py
task3/: solution.py  tests.py
