[tool.poetry]
name = "task-interview"
version = "0.1.0"
description = ""
authors = ["David Dzhalaev <72649244+DavidRomanovizc@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
